# groovylint

./: .flake8  .gitattributes  .gitignore  .jenkins.yml  CODEOWNERS  CONTRIBUTING.md  Dockerfile  Jenkinsfile  Makefile  Pipfile  README.md  ableton-registry.enc  build.gradle  codenarc  codenarc.sh  dependencies.yml  entrypoint.sh  fetch_jars.py  gradle.properties  pom.xml  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.txt  ruleset.groovy  run_codenarc.py  settings.gradle  setup.cfg
.github/: dependabot.yml
.hadolint/: Dockerfile
gradle/: libs.versions.toml
groovylint/: __init__.py  parse_xml.py  run_codenarc.py
resources/: .gitignore  README.txt  ruleset.groovy  run_codenarc.py
src/main/java/: WorkflowScript.java
test/: all.groovy  test.groovy
tests/: __init__.py  conftest.py  test_run_codenarc.py
tests/resources/: failure.badgroovy
tests/xml-reports/: multiple-violations-multiple-files-2.xml  multiple-violations-multiple-files.xml  multiple-violations-single-file.xml  single-violation-multiple-files.xml  single-violation-single-file.xml  success.xml
vars/: groovylint.groovy
