[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.14.3",
]

[project]
name = "groovylint"
dynamic = ["version"]

[tool.pytest.ini_options]
addopts = "--import-mode=importlib -ra"
filterwarnings = ["error"]
junit_family = "legacy"

[tool.ruff]
exclude = [".direnv", ".venv"]
line-length = 90
target-version = "py312"

[tool.ruff.lint]
select = ["ANN", "C90", "D", "E", "F", "I", "PL", "W"]

[tool.ruff.lint.isort]
lines-after-imports = 2
lines-between-types = 1
order-by-type = false

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.setuptools]
packages = []

[tool.setuptools.dynamic]
version = { file = "VERSION" }
