[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.14.3",
]

[project]
name = "groovylint"
dynamic = ["version"]

[tool.pytest.ini_options]
addopts = "--import-mode=importlib -ra"
filterwarnings = ["error"]
junit_family = "legacy"

[tool.ruff]
exclude = [".direnv", ".venv"]
line-length = 90
target-version = "py312"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812", # incompatible with ruff format
    "PTH",    # don't enforce pathlib over os.path
    "S314",   # allow non-defusedxml usage (to avoid extra dependencies)
    "S603",   # allow subprocess calls without extra validation
    "TRY400", # allow logging.error in exception handlers
]

[tool.ruff.lint.isort]
lines-after-imports = 2
lines-between-types = 1
order-by-type = false

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101", # allow assert statements
    "S108", # allow temporary files and directories
]

[tool.setuptools]
packages = []

[tool.setuptools.dynamic]
version = { file = "VERSION" }
